--- a/package.json
+++ b/package.json
@@ -77,7 +77,11 @@
     "eth-gas-reporter/colors": "1.4.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "4.6.0"
+    "@chainlink/contracts": "^1.5.0",
+    "@openzeppelin/contracts": "4.6.0",
+    "@sushiswap/core": "^1.4.2",
+    "@uniswap/v3-core": "github:lbertenasco/uniswap-v3-core",
+    "@uniswap/v3-periphery": "github:lbertenasco/uniswap-v3-periphery"
   },
   "devDependencies": {
     "@codechecks/client": "0.1.12",
